--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
         <p>Welkom op de homepagina</p>
        
     <script>
+        //change on feature c
+        const featureC = () => {
+            console.log('Feature C implementation');
+        };
+
+        featureC();
+        
         const sharedFunction = () => {
             console.log('Shared function implementation');
         };
+
 
         const featureA = () => {
             console.log('Feature A implementation');
