--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
             console.log('Shared function implementation');
         };
 
-        const featureA = () => {
-            console.log('Feature A implementation');
-        };
-        const featureB = () => {
-            console.log('Feature B implementation');
-        };
+            const sharedFunction = () => {
+        console.log('Shared function implementation');
+    };
 
-        featureA();
-        featureB();
+    const featureF = () => {
+        console.log('Feature F implementation');
+    };
+
+    featureF();
+    sharedFunction();
         sharedFunction();
 
     </script>
