--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-       
     <meta charset="UTF-8">
-        <title>Home</title>
+    <title>Home</title>
+</head>
 
 <body>
-        <h1>Home</h1>
-        <p>Welkom op de homepagina</p>
-       
+    <h1>Home</h1>
+    <p>Welkom op de homepagina</p>
+
     <script>
         const sharedFunction = () => {
             console.log('Shared function implementation');
@@ -18,12 +18,12 @@
         const featureA = () => {
             console.log('Feature A implementation');
         };
-        const featureB = () => {
-            console.log('Feature B implementation');
+        const featureF = () => {
+            console.log('Feature F implementation');
         };
 
         featureA();
-        featureB();
+        featureF();
         sharedFunction();
 
     </script>
