--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             console.log('Feature A implementation');
         };
         const featureB = () => {
-            console.log('Feature B implementation');
+            console.log('Feature F implementation'); // Changed implementation in feature-f
         };
 
         featureA();
